--- a/stuff.css
+++ b/stuff.css
@@ -1,29 +1,29 @@
 @font-face {
-  font-family: "Windows Regular (TrueType)";
-  src: local("Windows Regular (TrueType)"),
-    url(https://github.com/UFYU/FONTWIN/blob/main/Windows%20Regular.ttff)
+  font-family: "Windows";
+  src: local("Windows)"),
+    url(https://raw.githubusercontent.com/UFYU/FONTWIN/blob/main/Windows%20Regular.ttf)
       format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
-  font-family: "Windows Regular (TrueType)";
-  src: local("Windows Regular (TrueType)"),
+  font-family: "Windows";
+  src: local("Windows"),
     url(https://github.com/UFYU/FONTWIN/blob/main/Windows%20Regular.ttf)
       format("truetype");
   font-weight: bold;
   font-style: normal;
 }
 @font-face {
-  font-family: "Windows Regular (TrueType)";
-  src: local("Windows Regular (TrueType)"),
+  font-family: "Windows";
+  src: local("Windows"),
     url(https://github.com/UFYU/FONTWIN/blob/main/Windows%20Regular.ttf)
       format("truetype");
   font-weight: bold;
   font-style: italic;
 }
 @font-face {
-  font-family: "Windows Regular (TrueType)";
+  font-family: "Windows";
   src: local("Windows Regular"),
     url(https://github.com/UFYU/FONTWIN/blob/main/Windows%20Regular.ttf)
       format("truetype");
