--- a/stuff.css
+++ b/stuff.css
@@ -1,7 +1,7 @@
 @font-face {
   font-family: "Windows";
   src: local("Windows)"),
-    url(https://github.com/UFYU/FONTWIN/blob/main/Windows%20Regular.ttf)
+    url(https://github.com/UFYU/FONTWIN/blob/main/Windows%20Regular.ttf?raw=true)
       format("truetype");
   font-weight: normal;
   font-style: normal;
@@ -9,7 +9,7 @@
 @font-face {
   font-family: "Windows";
   src: local("Windows"),
-    url(https://github.com/UFYU/FONTWIN/blob/main/Windows%20Regular.ttf)
+    url(https://github.com/UFYU/FONTWIN/blob/main/Windows%20Regular.ttf?raw=true)
       format("truetype");
   font-weight: bold;
   font-style: normal;
@@ -17,7 +17,7 @@
 @font-face {
   font-family: "Windows";
   src: local("Windows"),
-    url(https://github.com/UFYU/FONTWIN/blob/main/Windows%20Regular.ttf)
+    url(https://github.com/UFYU/FONTWIN/blob/main/Windows%20Regular.ttf?raw=true)
       format("truetype");
   font-weight: bold;
   font-style: italic;
@@ -25,7 +25,7 @@
 @font-face {
   font-family: "Windows";
   src: local("Windows"),
-    url(https://github.com/UFYU/FONTWIN/blob/main/Windows%20Regular.ttf)
+    url(https://github.com/UFYU/FONTWIN/blob/main/Windows%20Regular.ttf?raw=true)
       format("truetype");
   font-weight: normal;
   font-style: italic;
